Fixed a bug in the Header that caused a "Jump-behavior"  when scrolling on small devices

--- a/src/Stylesheets/Header.css
+++ b/src/Stylesheets/Header.css
@@ -69,6 +69,12 @@
 }
 
 @media screen and (max-width: 900px) {
+
+    #playsholder {
+        height: 0;
+        background-color: #303030;
+    }
+
     .topnav.responsive {
         position: relative;
     }
